<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map_fragment"
            android:icon="@drawable/ic_map"
            android:menuCategory="secondary"

            android:title="@string/menu_map_txt" />
        <item
            android:id="@+id/data_list_fragment"
            android:icon="@drawable/ic_list"
            android:menuCategory="secondary"

            android:title="@string/menu_data" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:menuCategory="secondary"

            android:title="@string/menu_log_out_txt" />
    </group>
</menu>